# midibus

./: Makefile  README.md  devices.py  matrix.py  router.py
ableton/: Studio Channel.amxd  Studio.amxd  template.xml
client_server/: Makefile  cli.c  srv.c
nim/: midibus.nimble
nim/src/: app.nim  common.nim  midibus.nim  socket.nim
pygame/: TFTdemo.py  client.py  config.py  iraw2png  server.py  shm.py
rust/: Cargo.toml
rust/src/: app.rs  config.rs  devices.rs  filters.rs  lib.rs  list.rs  macro.rs  main.rs  output.rs  thru.rs  write.rs
rust/src/filters/: ccmap.rs  channel.rs  funnel.rs  mod.rs  status.rs
server/: Makefile  app.c  app.h  common.h  funcmap.c  funcmap.h  list.c  list.h  macro.c  macro.h  main.c  main.h  midi-server  midi-server.conf  notes.txt  osc.c  osc.conf  osc.h  rawmidi.c  socket.c  socket.h  thru.c  thru.h  write.c  write.h
server/filters/: ccmap.c  channel.c  filters.c  filters.h  funnel.c  realtime.c  status.c  thru.c
